[gd_scene load_steps=5 format=3 uid="uid://res5v7heprty"]

[ext_resource type="Script" path="res://sources/entities/Naia.gd" id="1_mof0k"]
[ext_resource type="SpriteFrames" uid="uid://o1kjbsipv5ya" path="res://resources/animations/NaiaSpriteFrames.tres" id="1_pi5ql"]
[ext_resource type="Script" path="res://sources/animations/NaiaAnimatedSprite2D.gd" id="3_nrcns"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4yr7c"]
size = Vector2(24, 64)

[node name="Naia" type="CharacterBody2D"]
script = ExtResource("1_mof0k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
frames = ExtResource("1_pi5ql")
animation = &"idle"
playing = true
script = ExtResource("3_nrcns")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_4yr7c")

[connection signal="process_event" from="." to="AnimatedSprite2D" method="_on_naia_process_event"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_finished"]
